# plak-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  compile.sh  hello.py  install-plak.sh  install.sh  main  plak.sh  pyproject.toml
adminer-theme/: README.md  adminer.css  adminer.js
commands/: domain  hosts  install  remote  server  skill  sshkey  status  version
commands/site/: add  db  delete  directive  disable  enable  help  install  lan  list  log  login  mappings  memory  path  ports  proxy  pull  push  reload  rename  share  status  tailscale  trust  upgrade  url  valet  wsl-hosts
docs/: homebrew.md
go/: README.md  compile.sh  go.sh  main
go/commands/: backup  checkpoint  clean  convert-to-webp  cron  db  dump  email  find  https  login  migrate  monitor  reset  suspend  update  vault  version  wpcli  zip
go/shared/: archive  logging  private-dir  wp-cli
packaging/homebrew/: plak-cli.rb.template  plak.rb.template
plak/: __init__.py  domain.py  main.py  server.py  sshkey.py
runner/: README.md  compile.sh  main  runner.sh
runner/commands/: backup  migrate
runner/shared/: archive  logging  private-dir  wp-cli
scripts/: dev_setup.sh  homebrew_formula.sh  release.sh
shared/: remote  ui  validate
shared/site/: runtime
skills/plak-cli/: SKILL.md
tests/: smoke.sh  test_main.py
tests/test_modules/: __init__.py  test_domain.py  test_server.py  test_sshkey.py
