[project]
authors = [
    {name = "Oscar Hugo Paz", email = "oscar@plak.io"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "pytest<9.0.0,>=8.3.2",
    "typer>=0.12.5",
]
name = "plak"
version = "0.1.0"
description = "Herramienta para gestionar servidores en la nube y sitios en WordPress"
readme = "README.md"

[project.scripts]
plak = "plak.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
