[project]
authors = [
    {name = "Oscar Hugo Paz", email = "oscar@plak.io"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "pytest<9.0.0,>=8.3.2",
    "typer>=0.12.5",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "textual>=0.52.1",
]
name = "plak"
# La versión ahora se obtiene dinámicamente de __init__.py
dynamic = ["version"]
description = "Herramienta para gestionar servidores en la nube y sitios en WordPress"
readme = "README.md"

[project.scripts]
plak = "plak.main:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "plak/__init__.py"
